--- a/estilos/style.css
+++ b/estilos/style.css
@@ -22926,3 +22926,16 @@ fieldset:disabled .btn {
   }
 }
 /*# sourceMappingURL=style.css.map */
+
+.pokemonEstilos {
+  width: 20%;
+  display: block;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+
+.buscadorPokemon {
+  width: 450px;
+  margin: auto;
+}
